basic structure created

--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,23 @@ body {
   background-color: #0a192f;
   color: #ccd6f6;
   scroll-behavior: smooth;
-  font-family: 'Fira Mono', monospace;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 .customContainer {
   width: 100%;
 }
+
+.hideNav {
+  transform: translateY(-100%);
+}
+
+.blur-backdrop-filter {
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
 @media (min-width: 640px) {
   .customContainer {
     max-width: 640px;
