--- a/src/index.css
+++ b/src/index.css
@@ -8,20 +8,20 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #64ffda;
+  background-color: #FB2576;
   border: 3px solid transparent;
   border-radius: 7px;
   background-clip: content-box;
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #0a192f;
+  background-color: #000000;
 }
 
 body {
   overflow-x: hidden;
-  background-color: #0a192f;
-  color: #ccd6f6;
+  background-color: #000000;
+  color: #00ffc3;
   scroll-behavior: smooth;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
