--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #FB2576;
+  background-color: #00ffc3;
   border: 3px solid transparent;
   border-radius: 7px;
   background-clip: content-box;
