checking responsive problem

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 }
 
 body {
-  overflow-x: hidden;
+  overflow-x: clip;
   background-color: #000000;
   color: #00ffc3;
   scroll-behavior: smooth;
